--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.WRITE_SMS"/>
     <uses-permission android:name="android.permission.SEND_SMS"/>
     <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
         android:name=".app.SimulateSMSApplication"
@@ -15,7 +16,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.SMSActivity">
+        <activity
+            android:name=".ui.activity.SMSActivity"
+            android:windowSoftInputMode="adjustNothing|stateUnspecified"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
